# firmware

./: .coderabbit.yaml  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.debug
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
main/Application/: application.h  bitmap.h
main/Application/Manager/: managers.h
main/Application/Manager/Devices/: devices.h  devicesManager.cpp  devicesManager.h
main/Application/Manager/Devices/ADC/: adc.cpp  adc.h
main/Application/Manager/Devices/I2C/: i2c.cpp  i2c.h
main/Application/Manager/Devices/PortExpander/: portexpander.cpp  portexpander.h
main/Application/Manager/Devices/RTC/: rtc.cpp  rtc.h
main/Application/Manager/Devices/SPI/: spi.cpp  spi.h
main/Application/Manager/Network/: networkManager.cpp  networkManager.h  networkTypes.h  network_types.h
main/Application/Manager/Network/DNS/: dnsServer.cpp  dnsServer.h
main/Application/Manager/Network/Provisioning/: provisionHandlers.cpp  provisionHandlers.h  (+2 more)
main/Application/Manager/SD/: sdManager.cpp  sdManager.h
main/Application/Manager/Settings/: settingsManager.cpp  settingsManager.h  settingsTypes.h  settings_types.h
main/Application/Manager/Time/: timeManager.cpp  timeManager.h  time_types.h
main/Application/Tasks/: tasks.h
main/Application/Tasks/Devices/: devicesTask.cpp  devicesTask.h
main/Application/Tasks/GUI/: guiTask.cpp  guiTask.h
main/Application/Tasks/Lepton/: leptonTask.cpp  leptonTask.h
main/Application/Tasks/Network/: networkTask.cpp  networkTask.h
(+69 files in other folders)
